			   XPCE ChangeLog
			   ==============


VERSION 6.1.4, distributed with SWI-Prolog 5.1.4
================================================


VERSION 6.1.3, distributed with SWI-Prolog 5.1.3
================================================

* FIXED: `file<-read_line' to fail on end-of-file as advertised (but
  no longer working after a recent patch to this code to deal with
  unlimited-length lines).

* FIXED: A few problems in the configuration-editor.

* ADDED: @prolog_ide->thread_monitor to monitor active threads.

* ADDED: `timer->service' to execute timers in `service mode'.

* FIXED: MT: not releasing XPCE mutex in event_window() if the window
  was destroyed while processing the event (leads to lockup after using
  a popup).

* ADDED: `path->relative_move' for better performance and flexibility.

* ADDED: optional argument to `device->clear' to force destruction of the
  erased objects.


VERSION 6.1.2, distributed with SWI-Prolog 5.1.2
================================================

* PORT: MS-Windows Moved from winsock-1 to winsock-2

* FIXED: memory leak due to error in recent change in incremental GC.

* MODIFIED: termToObject() translates Prolog floats that happen to be
  integer into an XPCE real object.  Petter Egesund.


VERSION 6.1.1, distributed with SWI-Prolog 5.1.1
================================================

* INSTALL: Remove .qlf files when installing new libraries to avoid version
  conflicts.

* ADDED: Optional `ignore-case' argument to `char_array->equal'.  Used in
  text_item completion.

* MODIFIED: renamed module of library(http_client) to pce_http_client

* FIXED: Windows: text repaint to use int rather than short for very large
  scrolled objects.  Petter Egesund.

* FIXED: `file<-read_line' no longer has a limit on the line-length and
  reads lines holding 0-bytes.  Anjo Anjewierden.

* PORT: Make the windows version thread-safe.

* CLEANUP: Deleted death code accessing plterm.dll functions.
